Only return metadata if requested